--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@hapi/hapi": "^20.1.5",
     "@hapi/jwt": "^2.0.1",
     "bcrypt": "^5.0.1",
+    "db-migrate-mysql": "^2.2.0",
     "dotenv": "^10.0.0",
     "joi": "^17.4.2",
+    "mysql": "^2.18.1",
     "node-pg-migrate": "^5.10.0",
     "pg": "^8.7.1",
     "uuid-random": "^1.3.2"
