--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.0.1",
     "db-migrate-mysql": "^2.2.0",
     "dotenv": "^10.0.0",
+    "hapi-cors": "^1.0.3",
     "joi": "^17.4.2",
     "mysql": "^2.18.1",
     "node-pg-migrate": "^5.10.0",
