--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "hapi-cors": "^1.0.3",
     "joi": "^17.4.2",
+    "longjohn": "^0.2.12",
     "mysql": "^2.18.1",
     "node-pg-migrate": "^5.10.0",
     "pg": "^8.7.1",
