--- a/.cPanel.yml
+++ b/.cPanel.yml
@@ -2,5 +2,5 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/u1578470/public_html/kasir2
-    - /src -R images $DEPLOYPATH
-    - / package.json $DEPLOYPATH
+    - /bin cp /src/* $DEPLOYPATH
+    - /bin/cp package.json $DEPLOYPATH
